cmake_minimum_required(VERSION 3.15)
project(C7)

set(CMAKE_CXX_STANDARD 14)


add_executable(main src/main.cpp)
add_executable(7_1_calling "src/7_1_calling.cpp")
add_executable(7_2_protos src/7_2_protos.cpp)
add_executable(7_3_twoarg src/7_3_twoarg.cpp)
add_executable(7_7_arrfun3 src/7_7_arrfun3.cpp)