cmake_minimum_required(VERSION 3.15)
project(C7)

set(CMAKE_CXX_STANDARD 11)


add_executable(main src/main.cpp)
add_executable(7_1_calling "src/7_1_calling.cpp")
add_executable(7_2_protos src/7_2_protos.cpp)
add_executable(7_3_twoarg src/7_3_twoarg.cpp)
add_executable(7_4_lotto src/7_4_lotto.cpp)
add_executable(7_5_arrfun1 src/7_5_arrfun1.cpp)
add_executable(7_6_arrfun2 src/7_6_arrfun2.cpp)
add_executable(7_7_arrfun3 src/7_7_arrfun3.cpp)
add_executable(7_8_arrfun4 src/7_8_arrfun4.cpp)
add_executable(7_9_strgfun src/7_9_strgfun.cpp)
add_executable(7_10_strgback src/7_10_strgback.cpp)
add_executable(7_11_travel src/7_11_travel.cpp)
add_executable(7_12_atrctfun src/7_12_atrctfun.cpp)
add_executable(7_13_strctptr src/7_13_strctptr.cpp)
add_executable(7_14_topfive src/7_14_topfive.cpp)
add_executable(7_15_arrobj src/7_15_arrobj.cpp)
add_executable(7_16_recur src/7_16_recur.cpp)
add_executable(7_17_ruler src/7_17_ruler.cpp)
add_executable(7_18_fun_ptr src/7_18_fun_ptr.cpp)